Dark Mode - Added styles for dark mode to avoid strong lights on the eye when working at night.

--- a/src/components/Alarm/styles.scss
+++ b/src/components/Alarm/styles.scss
@@ -42,7 +42,7 @@
   background: none;
   cursor: pointer;
   font-size: 1.25rem;
-  padding: 0.5rem;
+  padding: 0.75rem;
 
   &:disabled {
     opacity: 0.5;
